k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  # Not running a postgresql cluster so only 1 replica.
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        # Tells k8s to get us the volume.
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            # The default postgres port is 5432.
            - containerPort: 5432
          volumeMounts:
            # Use the volume we got.
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
