k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  # Manage 3 pods in this deployment using the same multi-server container.
  replicas: 3
  # This deployment is going to manage the 'server' component.
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: mriedem/multi-server
          ports:
            # The server app is hard-coded to listen on port 5000.
            - containerPort: 5000
