k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        # Does not expose ports or a service since no requests
        # go into the pods running in this deployment.
        - name: worker
          image: mriedem/multi-worker
