k8s/postgres-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  type: ClusterIP
  # Provide access to the postgres deployment.
  selector:
    component: postgres
  ports:
    # The port values match the container port in postgres-deployment.
    - port: 5432
      targetPort: 5432
