k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec:
  type: ClusterIP
  # Provide access to the redis deployment.
  selector:
    component: redis
  ports:
    # The port values match the container port in redis-deployment.
    - port: 6379
      targetPort: 6379
