k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # Tell kubernetes we want to use the nginx ingress implementation.
    kubernetes.io/ingress.class: nginx
    # Strip any trailing slash off the path.
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        # Define route paths for http (port 80).
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
